k8s/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      name: delivery
      labels:
        app: delivery
    spec:
      containers:
        - name:  delivery
          image: lfneves/delivery-mvp:0.0.6
          ports:
            - containerPort: 8099
          resources:
            requests:
              cpu: 20m
              memory: 500Mi
      imagePullSecrets:
        - name: secret-dockerhub
