k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      name: delivery
      labels:
        app: delivery
    spec:
      containers:
        - name:  delivery
          image: lfneves/delivery-mvp:0.0.1
          ports:
            - containerPort: 8099
      imagePullSecrets:
        - name: secret-dockerhub
