k8s/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: delivery.test
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery
                port:
                  number: 32000
